version/0.4.0/engine/engine-overview.md
# 固定收益信用分析引擎 — 架构总览

**版本**: v0.3.0 | **日期**: 2026-07-08

---

## 一、核心理念：为什么传统财务分析不够？

传统财务分析基于一个隐含假设——**企业的信用风险可以从其财务报表中读出来**。这一假设在以下三类行业中系统性失效：

| 行业类型 | 财务分析为何失效 | 最重因子在哪里 |
|---|---|---|
| **政策驱动型**（光伏、半导体） | 政策周期决定行业总需求天花板和盈利中枢，政策急转弯可在数周内摧毁一个行业 | 产业政策/地缘政治（不在报表上） |
| **技术壁垒型**（高端装备、生物医药、医疗器械） | 核心资产（IP/管线/注册证）不在资产负债表上；大量未盈利企业无法用PE/PB估值 | 技术路线/核心资产（不在报表上） |
| **资产租约型**（数据中心） | 类REITs属性，核心看NOI/DSCR而非传统财务指标 | 客户租约质量（不在报表上） |

**核心结论：信用分析中最重的因子，永远不在资产负债表上。**

### 外部评级的问题

验证案例一致表明，外部信用评级系统性滞后于真实信用恶化：

| 案例 | 违约前评级 | 违约后评级 | 滞后窗口 |
|---|---|---|---|
| 永煤控股（2020） | AAA/稳定 | BB | 17+个月 |
| 紫光集团（2020） | AAA/稳定 | 破产重整 | 17+个月 |

### 两个理论基础

| 理论 | 含义 | 在引擎中的体现 |
|---|---|---|
| **马赛克理论** | 单块公开数据碎片无意义，拼在一起构成完整画像 | 多源数据聚合 → 信号叠加 → 置信度加权 |
| **信息完备性理论** | 数据缺口不是缺陷——它们是风险信号。"我们没有这个数据"本身就在告诉用户某个维度存在不确定性 | 每个分析结论附带数据完备性评分和缺口列表 |

---

## 二、总体架构

```
输入: 行业 + 企业 + 分析日期
        │
   ┌────┴────┐
   │马赛克引擎│  ← 信号提取 + 拼图 + 完备性评估
   │ (Mode A) │
   └────┬────┘
        │
   ┌────┼──────────────────────────┐
   │    │                          │
   ▼    ▼                          ▼
轨道A          轨道B         轨道C+:多利益方视角
基本面分析    市场定价信号    (M0-M6,按优先级实现)
(行业金字塔)  (四级信号)
        │           │
        └────┬──────┘
             ▼
     交叉对撞矩阵
     共识 → 互相强化
     分歧 → 最有价值的洞察
             │
             ▼
      综合输出
  评级 + 信号 + 完备性报告
```

### 三层架构说明

| 层级 | 名称 | 功能 | 状态 |
|---|---|---|---|
| **第一层** | 马赛克引擎（Mode A） | 从非结构化公开数据中提取信号、拼图、评估完备性 | 已实现（v0.3.0） |
| **第二层** | 双轨分析（Track A + B） | 基本面金字塔评分 + 市场定价信号交叉验证 | 已实现（v0.1.0） |
| **第三层** | 多利益方视角（M0-M6） | 覆盖信用审批、债券投资、承销、交易、组合风控等多种角色 | M0-M1已实现，M2-M6规划中 |

### 双轨并行结构

```
轨道A: 基本面分析                    轨道B: 市场定价信号
(定性+评分)                         (量化信号)
  L1 (最重)                          Credit Spreads
  L2                                 Volatility
  L3                                 Fund Flows
  L4 (最轻)                          Rating Migration
        │                                │
        └────────────┬───────────────────┘
                     ▼
            交叉对撞矩阵
  Consensus → 互相强化
  Divergence → 最有价值的洞察
```

---

## 三、关键设计原则

| # | 原则 | 含义 |
|---|---|---|
| 1 | **财务分析不是最重层** | 最重的因子永远是结构性/外部因子，不在报表上 |
| 2 | **行业决定权重** | 每个行业的最重因子由十维评分（D1-D10）决定，不同行业使用不同权重模板 |
| 3 | **逐层递进** | L1必须通过才有意义进行L2分析，不可跳跃 |
| 4 | **L4验证层属性** | 财务层（最底层）用于验证上层判断。财务好+上层差=更危险（周期顶部或造假）；财务差+上层好=标记风险但不颠覆 |
| 5 | **公开数据足够** | POC已在3个黑天鹅案例和3个行业中验证，公开数据足以支撑有效分析 |
| 6 | **轨道B独立不附属** | 市场定价信号独立于基本面分析，两轨分歧产生最有价值的问题 |
| 7 | **两轨冲突时优先轨道A** | 可审计的公开财务事实优先于外部评级 |
| 8 | **数据缺口=风险信号** | 每个分析必须包含完备性报告，标注缺失了什么、这意味着什么风险 |
| 9 | **识别结构性不可持续** | 框架能识别结构性不可持续的信用质量，但不能预测违约的精确时机或触发事件 |

---

## 四、数据源架构

**硬约束：零内部数据、零非公开数据、零付费数据（POC阶段）。**

| 数据层 | 来源 | 采集方式 |
|---|---|---|
| 宏观政策 | 政府官方网站 | WebSearch + LLM解析 |
| 行业数据 | 行业协会、券商报告 | WebSearch |
| 供应链价格 | 免费数据平台（PVInfoLink/TrendForce/SMM等） | WebSearch |
| 企业信息 | 股转系统(NEEQ)、裁判文书网、被执行记录 | WebSearch |
| 招投标 | 省级采购平台 | WebSearch |
| 债券数据 | 交易所公告、中国货币网 | WebSearch |

**分析前必须验证4类数据可获取性**：政策数据、企业风险数据、行业数据、市场定价数据。

---

## 五、评分引擎与评级映射

### 评分公式

```
Composite Score = Sigma(Layer Score × Layer Weight)
Layer Weight = f(Industry 10-Dimension Score)
Layer Score = Sigma(Indicator Score × Indicator Weight)
Indicator Score = f(Raw Value, Threshold, Direction)
```

### 评级映射表

| 分数区间 | 评级 | 含义 |
|---|---|---|
| 9.0 - 10.0 | AAA | 极低风险 |
| 7.5 - 8.9 | AA / A | 低风险 |
| 6.0 - 7.4 | BBB / BB | 中等风险 |
| 4.0 - 5.9 | B | 较高风险 |
| 2.0 - 3.9 | CCC | 高风险 |
| 0 - 1.9 | D | 违约/濒临违约 |

---

## 六、验证状态

| 行业 | 验证类型 | 验证对象 | 状态 | 关键发现 |
|---|---|---|---|---|
| 光伏 | 前瞻性验证 | 隆基绿能 vs 一道新能 | 已完成 | 5.5分区分度 |
| 半导体 | 回溯性验证 | 紫光集团（T-17个月） | 已完成 | L5所有指标全红，市场被叙事蒙蔽 |
| 煤业（跨行业） | 回溯性验证 | 永煤控股（T-17个月 / T-4.5个月） | 已完成 | Track A 4红1黄，Track B全部误导 |
| 高端装备 | — | — | 未验证 | — |
| 生物医药 | — | — | 未验证 | — |
| 医疗器械 | — | — | 未验证 | — |
| 新能源汽车 | — | — | 未验证 | — |
| 数据中心 | — | — | 未验证 | — |

---

## 七、版本历史

| 版本 | 日期 | 变更内容 |
|---|---|---|
| 0.1.0 | 2026-07-07 | 初始发布：十维评分、四层金字塔、双轨、7个行业、光伏前瞻验证 |
| 0.2.0 | 2026-07-07 | 回溯验证方法论、永煤+紫光案例验证、半导体五层金字塔 |
| 0.3.0 | 2026-07-08 | 马赛克引擎架构、多利益方覆盖、P0债券投资仪表盘、信号置信度/密度、完备性报告 |

---

## 相关内容

- [行业分类与分析框架](industry-framework.md) — 十维评分、行业类型、七行业金字塔规格
- [双轨分析方法论](dual-track-methodology.md) — 轨道A+轨道B、交叉对撞、评级映射、完整推理实例
- [马赛克引擎](mosaic-engine.md) — 信号提取、拼图、完备性评估、Mode B接口定义
