version/v0.5.1-alpha/engine/engine-overview.md
# 固定收益信用分析引擎 — 架构总览

**版本**: v0.3.0 | **日期**: 2026-07-08

---

## 引擎文档导航

| 文档 | 内容 | 何时查阅 |
|---|---|---|
| **engine-overview.md** | 架构总览 · 设计原则 · 文档导航 | 首次了解引擎 |
| **industry-framework.md** | 十维评分 · 四种行业范式 · 七行业金字塔 · 一票否决 | 需要确定分析框架 |
| **qualitative-analysis.md** | 信息源分级 · 政策解读 · 马赛克拼图 · 叙事拆解 | 需要定性分析指导 |
| **quantitative-analysis.md** | 利差分析 · 波动率 · 多因子 · 压力测试 · 市场隐含信号 | 需要定量分析指导 |
| **dual-track-methodology.md** | 轨道A+B · 交叉对撞 · 评级映射 · 完整推理实例 | 需要了解双轨整合逻辑 |
| **mosaic-engine.md** | 信号提取 · 拼图聚合 · 完备性评估 · Mode B接口 | 需要了解数据→评估的完整链路 |
| **multi-stakeholder.md** | M0-M5六类身份 · 多视角交叉对比 | 需要多身份并行分析 |
| **validation-methodology.md** | 黑天鹅回溯 · 双时点验证 · 前瞻对比 | 需要验证方法论有效性 |
| **lgd-recovery-framework.md** | LGD五级分类 · 抵押物估值 · 回收路径 · 中国市场调整 | 需要评估债项回收率 |
| **external-support-framework.md** | 政府/集团/战投支持 · 支持能力vs意愿 · 上调规则 · 陷阱信号 | 需要评估外部支持 |
| **outlook-monitoring-framework.md** | 评级展望 · 观察名单 · 持续监控 · 迁移矩阵 | 需要前瞻方向和监控机制 |
| **financial-deep-dive.md** | 三表联动 · 营运资金 · FCF · 场景敏感性· 压力测试升级 | 需要财务深度分析 |
| **governance-fraud-risk.md** | 20+欺诈信号 · 逃废债检测 · 存贷双高 · 治理评估 | 需要检测财务欺诈 |
| **lgv-framework.md** | 城投债双轨(政府+平台) · 四级分类 · 六大预警 | 需要分析城投债 |
| **non-credit-risk-overlay.md** | 市场/操作/声誉/战略/流动性风险叠加层 | 需要非信用风险评估 |
| **false-positive-negative-testing.md** | 假阳性/假阴性测试方法 · 5案例实测 | 需要验证引擎准确性 |
| **output-layered-framework.md** | L0信号卡+L1快照+L2深度 · 三层输出 · 工作流嵌入 | 需要产品输出规范 |
| **financial-analysis-audit.md** | 财务层10项标准差距审查 | 审查记录 |
| **quantitative-audit.md** | 定量模块统计严谨性审查 | 审查记录 |
| **rating-agency-benchmark-audit.md** | 评级机构方法论对标 | 审查记录 |
| **risk-management-standards-audit.md** | Basel/COSO风险管理标准对标 | 审查记录 |
| **practitioner-usability-audit.md** | 一线从业者可用性审查 | 审查记录 |
| **self-assessment-2026-07-08.md** | 引擎中期自评 | 审查记录 |
| **final-review-2026-07-08.md** | 引擎终审 | 审查记录 |
| **capability-review-2026-07-08.md** | 引擎能力终审 | 审查记录 |

---

## 一、核心理念：为什么传统财务分析不够？

传统财务分析基于一个隐含假设——**企业的信用风险可以从其财务报表中读出来**。这一假设在以下三类行业中系统性失效：

| 行业类型 | 财务分析为何失效 | 最重因子在哪里 |
|---|---|---|
| **政策驱动型**（光伏、半导体） | 政策周期决定行业总需求天花板和盈利中枢，政策急转弯可在数周内摧毁一个行业 | 产业政策/地缘政治（不在报表上） |
| **技术壁垒型**（高端装备、生物医药、医疗器械） | 核心资产（IP/管线/注册证）不在资产负债表上；大量未盈利企业无法用PE/PB估值 | 技术路线/核心资产（不在报表上） |
| **资产租约型**（数据中心） | 类REITs属性，核心看NOI/DSCR而非传统财务指标 | 客户租约质量（不在报表上） |

**核心结论：信用分析中最重的因子，永远不在资产负债表上。**

### 外部评级的问题

验证案例一致表明，外部信用评级系统性滞后于真实信用恶化：

| 案例 | 违约前评级 | 违约后评级 | 滞后窗口 |
|---|---|---|---|
| 永煤控股（2020） | AAA/稳定 | BB | 17+个月 |
| 紫光集团（2020） | AAA/稳定 | 破产重整 | 17+个月 |

### 两个理论基础

| 理论 | 含义 | 在引擎中的体现 |
|---|---|---|
| **马赛克理论** | 单块公开数据碎片无意义，拼在一起构成完整画像 | 多源数据聚合 → 信号叠加 → 置信度加权 |
| **信息完备性理论** | 数据缺口不是缺陷——它们是风险信号。"我们没有这个数据"本身就在告诉用户某个维度存在不确定性 | 每个分析结论附带数据完备性评分和缺口列表 |

---

## 二、总体架构

```
输入: 行业 + 企业 + 分析日期
        │
   ┌────┴────┐
   │马赛克引擎│  ← 信号提取 + 拼图 + 完备性评估
   │ (Mode A) │
   └────┬────┘
        │
   ┌────┼──────────────────────────┐
   │    │                          │
   ▼    ▼                          ▼
轨道A          轨道B         轨道C+:多利益方视角
基本面分析    市场定价信号    (M0-M6,按优先级实现)
(行业金字塔)  (四级信号)
        │           │
        └────┬──────┘
             ▼
     交叉对撞矩阵
     共识 → 互相强化
     分歧 → 最有价值的洞察
             │
             ▼
      综合输出
  评级 + 信号 + 完备性报告
```

### 三层架构说明

| 层级 | 名称 | 功能 | 状态 |
|---|---|---|---|
| **第一层** | 马赛克引擎（Mode A） | 从非结构化公开数据中提取信号、拼图、评估完备性 | 已实现（v0.3.0） |
| **第二层** | 双轨分析（Track A + B） | 基本面金字塔评分 + 市场定价信号交叉验证 | 已实现（v0.1.0） |
| **第三层** | 多利益方视角（M0-M6） | 覆盖信用审批、债券投资、承销、交易、组合风控等多种角色 | M0-M1已实现，M2-M6规划中 |

### 双轨并行结构

```
轨道A: 基本面分析                    轨道B: 市场定价信号
(定性+评分)                         (量化信号)
  L1 (最重)                          Credit Spreads
  L2                                 Volatility
  L3                                 Fund Flows
  L4 (最轻)                          Rating Migration
        │                                │
        └────────────┬───────────────────┘
                     ▼
            交叉对撞矩阵
  Consensus → 互相强化
  Divergence → 最有价值的洞察
```

---

## 三、关键设计原则

| # | 原则 | 含义 |
|---|---|---|
| 1 | **财务分析不是最重层** | 最重的因子永远是结构性/外部因子，不在报表上 |
| 2 | **行业决定权重** | 每个行业的最重因子由十维评分（D1-D10）决定，不同行业使用不同权重模板 |
| 3 | **逐层递进** | L1必须通过才有意义进行L2分析，不可跳跃 |
| 4 | **L4验证层属性** | 财务层（最底层）用于验证上层判断。财务好+上层差=更危险（周期顶部或造假）；财务差+上层好=标记风险但不颠覆 |
| 5 | **公开数据足够** | POC已在3个黑天鹅案例和3个行业中验证，公开数据足以支撑有效分析 |
| 6 | **轨道B独立不附属** | 市场定价信号独立于基本面分析，两轨分歧产生最有价值的问题 |
| 7 | **两轨冲突时优先轨道A** | 可审计的公开财务事实优先于外部评级 |
| 8 | **数据缺口=风险信号** | 每个分析必须包含完备性报告，标注缺失了什么、这意味着什么风险 |
| 9 | **识别结构性不可持续** | 框架能识别结构性不可持续的信用质量，但不能预测违约的精确时机或触发事件 |

---

## 四、数据源架构

**硬约束：零内部数据、零非公开数据、零付费数据（POC阶段）。**

| 数据层 | 来源 | 采集方式 |
|---|---|---|
| 宏观政策 | 政府官方网站 | WebSearch + LLM解析 |
| 行业数据 | 行业协会、券商报告 | WebSearch |
| 供应链价格 | 免费数据平台（PVInfoLink/TrendForce/SMM等） | WebSearch |
| 企业信息 | 股转系统(NEEQ)、裁判文书网、被执行记录 | WebSearch |
| 招投标 | 省级采购平台 | WebSearch |
| 债券数据 | 交易所公告、中国货币网 | WebSearch |

**分析前必须验证4类数据可获取性**：政策数据、企业风险数据、行业数据、市场定价数据。

---

## 五、评分引擎与评级映射

### 评分公式

```
Composite Score = Sigma(Layer Score × Layer Weight)
Layer Weight = f(Industry 10-Dimension Score)
Layer Score = Sigma(Indicator Score × Indicator Weight)
Indicator Score = f(Raw Value, Threshold, Direction)
```

### 评级映射表

**【评级修订 v0.4.0】** 评级粒度从6档扩展至12档，增加AA+/AA-/A+/A-/BBB+/BBB-/BB+/BB-/B+/B-中间档。

| 分数区间 | 新评级 | 旧评级对应 | 含义 |
|---|---|---|---|
| 9.5 - 10.0 | AAA | AAA | 极低风险 |
| 9.0 - 9.4 | AA+ | AA | |
| 8.5 - 8.9 | AA | AA | 低风险 |
| 8.0 - 8.4 | AA- | AA | |
| 7.5 - 7.9 | A+ | A | 中低风险 |
| 7.0 - 7.4 | A | A | |
| 6.5 - 6.9 | A- | A | |
| 6.0 - 6.4 | BBB+ | BBB | 中等风险 |
| 5.5 - 5.9 | BBB | BBB | |
| 5.0 - 5.4 | BBB- | BBB | |
| 4.5 - 4.9 | BB+ | BB | 中高风险 |
| 4.0 - 4.4 | BB | BB | |
| 3.5 - 3.9 | BB- | BB | |
| 3.0 - 3.4 | B+ | B | 高风险 |
| 2.5 - 2.9 | B | B | |
| 2.0 - 2.4 | B- | B | |
| 1.0 - 1.9 | CCC | CCC | 极高风险 |
| 0 - 0.9 | D | D | 违约/濒临 |

---

## 六、验证状态

| 行业 | 验证类型 | 验证对象 | 状态 | 关键发现 |
|---|---|---|---|---|
| 光伏 | 前瞻对比 | 隆基 7.00 vs 一道新能 1.50 | ✅ 完成 | 5.5分区分度·L2技术路线决定性能 |
| 半导体 | 回溯验证 | 紫光集团（T-17个月） | ✅ 完成 | L5全部红色·市场被叙事蒙蔽 |
| 煤业 | 回溯验证 | 永煤控股（双时点·17个月） | ✅ 完成 | Track A 4红1黄·Track B全部误导 |
| 汽车 | 回溯+多身份 | 华晨汽车（三身份·22个月） | ✅ 完成 | 信贷/投资/交易三视角全部预警 |
| 生物医药 | 前瞻对比 | 百济神州 8.11 vs 迈威生物 4.57 | ✅ 完成 | 3.54分差·L4现金跑道贡献39.5% |
| 高端装备 | 前瞻对比 | 科德数控 81.2% vs 拓璞数控 36.6% | ✅ 完成 | 11.15分差·五大陷阱校正揭示真实亏损 |
| 医疗器械 | 前瞻对比 | 迈瑞 7.88 vs 万东 4.19 | ✅ 完成 | 3.69分差·L2+L3权重47%解释51.5%差距 |
| 新能源车 | 前瞻对比 | 比亚迪 6.52 vs 零跑 5.21 · CATL 8.77 vs 欣旺达 3.66 | ✅ 完成 | 整车区分度20%·供应链区分度58% |
| 数据中心 | 前瞻对比 | 万国数据 7.46 vs 世纪互联 5.36 | ✅ 完成 | 2.10分差·L3客户/租约质量决定性能 |
| 假阳性/假阴性 | 测试 | 协鑫集成·康美药业·北大方正 | ✅ 完成 | 完整引擎假阴性率0%（5案例） |

---

## 七、版本历史

| 版本 | 日期 | 变更内容 |
|---|---|---|
| 0.1.0 | 2026-07-07 | 初始发布：十维评分、四层金字塔、双轨、7个行业、光伏前瞻验证 |
| 0.2.0 | 2026-07-07 | 回溯验证方法论、永煤+紫光案例验证、半导体五层金字塔 |
| 0.3.0 | 2026-07-08 | 马赛克引擎架构、多利益方覆盖、P0债券投资仪表盘、信号置信度/密度、完备性报告 |

---

## 相关内容

- [行业分类与分析框架](industry-framework.md) — 十维评分、行业类型、七行业金字塔规格
- [双轨分析方法论](dual-track-methodology.md) — 轨道A+轨道B、交叉对撞、评级映射、完整推理实例
- [马赛克引擎](mosaic-engine.md) — 信号提取、拼图、完备性评估、Mode B接口定义
